# tribeflow

./: README.md  main.py  setup.py
tribeflow/: CMakeLists.txt  binding.cpp  dataio.cpp  dataio.hpp  debug.hpp  defs.hpp  learn_body.cpp  learn_body.hpp  main.cpp  plearn.cpp  plearn.hpp  plearn.py  stamp_lists.hpp
tribeflow/include/: optional.hpp
tribeflow/kernels/: __init__.py  base.cpp  base.hpp
